--- a/LVTN/app/src/main/res/layout/activity_main.xml
+++ b/LVTN/app/src/main/res/layout/activity_main.xml
@@ -34,5 +34,12 @@
             android:layout_height="wrap_content" />
     </android.support.design.widget.AppBarLayout>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="10dp"
+        app:backgroundTint="@color/colorRed"
+        android:src="@drawable/ic_add"/>
 </android.support.design.widget.CoordinatorLayout>
