--- a/LVTN/app/src/main/res/values/colors.xml
+++ b/LVTN/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#125688</color>
+    <color name="colorPrimary">#AEEA00</color>
+    <color name="colorPrimaryDark">#C0CA33</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#c8e8ff</color>
+    <color name="colorAccent">#827717</color>
     <color name="colorRed">#FF5159</color>
+    <color name="colorWhite">#F4f4f4</color>
 </resources>
