--- a/LVTN/app/src/main/res/values/colors.xml
+++ b/LVTN/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#AEEA00</color>
-    <color name="colorPrimaryDark">#C0CA33</color>
+    <color name="colorPrimary">#9CCC65</color>
+    <color name="colorPrimaryDark">#33691E</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
