--- a/LVTN/app/src/main/res/layout/fragment_user.xml
+++ b/LVTN/app/src/main/res/layout/fragment_user.xml
@@ -1,6 +1,50 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.fragment.User">
 
-</LinearLayout>
+    <!-- TODO: Update blank fragment layout -->
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="144dp"
+        app:srcCompat="@drawable/cover_user"
+        android:id="@+id/imageViewCoverUser" />
+
+    <ImageView
+        app:srcCompat="@drawable/ic_person_black_24dp"
+        android:id="@+id/imageViewAvartaUser"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp" />
+
+    <TextView
+        android:text="TextViewNameUser"
+        android:layout_height="20dp"
+        android:id="@+id/textViewNameUser"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="150dp"
+        android:layout_width="250dp" />
+
+    <ListView
+        android:layout_width="320dp"
+        android:layout_height="320dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginLeft="30dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/listViewAttributeUser" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|end"
+        app:srcCompat="@drawable/ic_add_circle_white_24dp" />
+
+    <include layout="@layout/fab_layout" />
+
+</android.support.design.widget.CoordinatorLayout>
