--- a/LVTN/app/src/main/res/values/colors.xml
+++ b/LVTN/app/src/main/res/values/colors.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9CCC65</color>
-    <color name="colorPrimaryDark">#33691E</color>
-    <color name="textColorPrimary">#FFFFFF</color>
-    <color name="windowBackground">#FFFFFF</color>
-    <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#827717</color>
-    <color name="colorRed">#FF5159</color>
-    <color name="colorWhite">#F4f4f4</color>
+    <color name="colorPrimary">#008080</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#008080</color>
 </resources>
