--- a/LVTN/app/src/main/res/layout/fragment_videos.xml
+++ b/LVTN/app/src/main/res/layout/fragment_videos.xml
@@ -9,5 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/MyButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 
 </FrameLayout>
