--- a/LVTN/app/src/main/res/anim/back_duoi.xml
+++ b/LVTN/app/src/main/res/anim/back_duoi.xml
@@ -3,7 +3,8 @@
     android:fillAfter="true" >
     <translate
         android:duration="200"
-        android:fromXDelta="150%"
-        android:toXDelta="0%"
+        android:fromYDelta="150%"
+        android:toYDelta="0%"
         />
+
 </set>
