--- a/LVTN/app/src/main/res/anim/move_duoi.xml
+++ b/LVTN/app/src/main/res/anim/move_duoi.xml
@@ -3,8 +3,7 @@
     android:fillAfter="true" >
     <translate
         android:duration="200"
-        android:fromXDelta="-150%"
-        android:toXDelta="0%"
+        android:fromYDelta="-150%"
+        android:toYDelta="0%"
         />
-
 </set>
