--- a/LVTN/app/src/main/res/layout/fab_layout.xml
+++ b/LVTN/app/src/main/res/layout/fab_layout.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_Trai"
+        android:id="@+id/fab_Duoi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_dialog_map"
