--- a/LVTN/app/src/main/res/layout/fragment_videos.xml
+++ b/LVTN/app/src/main/res/layout/fragment_videos.xml
@@ -9,5 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="Click"
+        android:id="@+id/myButton"/>
 
 </FrameLayout>
