--- a/LVTN/app/src/main/res/layout/activity_video_player.xml
+++ b/LVTN/app/src/main/res/layout/activity_video_player.xml
@@ -2,7 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+        <RelativeLayout
+            android:id="@+id/loadingVPanel"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:background="#111111"
+            android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true">
+                        <ProgressBar
+                            android:layout_centerHorizontal="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:indeterminate="true" />
+                </RelativeLayout>
+        </RelativeLayout>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,5 +37,6 @@
                     android:layout_gravity="center_horizontal|bottom" />
 
         </FrameLayout>
+
 
 </LinearLayout>
