--- a/LVTN/app/src/main/res/layout/fragment_videos.xml
+++ b/LVTN/app/src/main/res/layout/fragment_videos.xml
@@ -5,14 +5,18 @@
     tools:context=".ui.fragment.Videos">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="Click"
-        android:id="@+id/myButton"/>
+        android:id="@+id/listViewVideo"
+        android:dividerHeight="2dp"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_videocam_white_24dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp" />
 </FrameLayout>
