--- a/LVTN/app/src/main/res/layout/fragment_videos.xml
+++ b/LVTN/app/src/main/res/layout/fragment_videos.xml
@@ -13,10 +13,20 @@
         android:dividerHeight="2dp"/>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_photo_camera_white_24dp"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="90dp"/>
+
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabVideo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_videocam_white_24dp"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="end|bottom"
         android:layout_margin="16dp" />
 </FrameLayout>
