--- a/LVTN/app/src/main/res/layout/activity_main.xml
+++ b/LVTN/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,9 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorHeight="6dp"
+            app:tabIndicatorHeight="2dp"
             app:tabGravity="fill"
-            app:tabBackground="@drawable/tab_color_selector"
-            android:background="#FFFFFF"/>
+            android:background="@color/colorPrimary"/>
 
     </android.support.design.widget.AppBarLayout>
 
