--- a/LVTN/app/src/main/res/layout/player_media_layout.xml
+++ b/LVTN/app/src/main/res/layout/player_media_layout.xml
@@ -37,6 +37,10 @@
         <ImageButton android:id="@+id/next"
             style="@android:style/MediaButton.Next"
             />
+        <ImageButton android:id="@+id/setting"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/hplib_ic_settings"    />
 
     </LinearLayout>
 
