--- a/LVTN/app/src/main/res/values/colors.xml
+++ b/LVTN/app/src/main/res/values/colors.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#BF360C</color>
-    <color name="colorAccent">#FF7043</color>
-    <color name="tab_background_selected">#cecece</color>
-    <color name="tab_background_unselected">#323232</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#004D40</color>
+    <color name="colorAccent">#00BFA5</color>
 </resources>
