--- a/LVTN/app/src/main/res/layout/activity_row_trip.xml
+++ b/LVTN/app/src/main/res/layout/activity_row_trip.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
 
-    tools:context=".ui.activity.RowTrip">
+    tools:context=".ui.activity.Trips.RowTrip">
 
 
     <ImageView
@@ -117,7 +117,7 @@
         android:layout_below="@+id/line"
         android:layout_toRightOf="@+id/buttonLike"
         android:layout_toEndOf="@+id/buttonLike"
-        android:layout_width="120dp" />
+        android:layout_width="100dp" />
 
     <Button
         android:text="Like"
@@ -128,7 +128,7 @@
         android:layout_below="@+id/line"
         android:layout_alignLeft="@+id/imageViewAddrFinish"
         android:layout_alignStart="@+id/imageViewAddrFinish"
-        android:layout_width="90dp" />
+        android:layout_width="100dp" />
 
     <Button
         android:text="View"
@@ -139,6 +139,6 @@
         android:layout_below="@+id/line"
         android:layout_toRightOf="@+id/buttonComment"
         android:layout_toEndOf="@+id/buttonComment"
-        android:layout_width="90dp" />
+        android:layout_width="100dp" />
 
 </RelativeLayout>
