--- a/LVTN/app/src/main/res/layout/activity_row_video.xml
+++ b/LVTN/app/src/main/res/layout/activity_row_video.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cse.hcmut.edu.vn.tripmaster.ui.activity.RowVideo">
+    tools:context="cse.hcmut.edu.vn.tripmaster.ui.activity.Videos.RowVideo">
 
     <ImageView
         android:layout_height="80dp"
