--- a/LVTN/app/src/main/res/values/colors.xml
+++ b/LVTN/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#BF360C</color>
-    <color name="colorAccent">#FF7043</color>
-    <color name="tab_background_selected">#cecece</color>
-    <color name="tab_background_unselected">#323232</color>
+    <color name="colorPrimary">#008080</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#008080</color>
+    <color name="tab_background_selected">#FFFFFF</color>
+    <color name="tab_background_unselected">#FFFFFF</color>
 </resources>
